[tool.poetry]
name = "audit-trail"
version = "0.1.0"
description = ""
authors = ["Indoc Research"]

[tool.poetry.dependencies]
python = "^3.7"
elasticsearch = "7.15.2"
fastapi = "0.62.0"
fastapi-utils = "0.2.1"
gunicorn = "20.0.4"
httptools = "0.1.1"
httpx = "0.22.0"
opentelemetry-api = "1.11.1"
opentelemetry-exporter-jaeger = "1.11.1"
opentelemetry-instrumentation = "0.30b1"
opentelemetry-instrumentation-elasticsearch = "0.30b1"
opentelemetry-instrumentation-fastapi = "0.30b1"
opentelemetry-instrumentation-httpx = "0.30b1"
pilot-platform-common = "0.0.25"
pydantic = "1.9.0"
PyJWT = "1.4.2"
python-dotenv = "0.19.1"
python-json-logger = "0.1.11"
python-multipart = "0.0.5"
uvicorn = "0.12.3"
uvloop = "0.14.0"

[tool.poetry.dev-dependencies]
async-asgi-testclient = "1.4.9"
pytest = "7.1.1"
pytest-env = "0.6.2"
pytest-asyncio = "0.18.1"
pytest-httpx = "0.20.0"
pytest-mock = "3.7.0"
pytest-cov = "^3.0.0"
python-multipart = "0.0.5"

[tool.pytest.ini_options]
asyncio_mode = "auto"
env = [
    "CONFIG_CENTER_ENABLED=false",
    "ATLAS_ADMIN=",
    "ATLAS_PASSWD=",
    "ATLAS_API=",
    "METADATA_API=",
    "ELASTIC_SEARCH_SERVICE=",
    "NEO4J_SERVICE="
]
log_cli = "true"
addopts = "--cov=app --cov-report term --cov-report=xml"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
